--- a/index.css
+++ b/index.css
@@ -7,7 +7,8 @@
 .banner{
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(rgba(19, 2, 35, 0.75),rgba(0,0,0,0.75)),url("./images/image.jpg");
+    background-image: url("./images/new\ background.gif");
+    /* linear-gradient(rgb(0, 0, 0),rgb(0, 0, 0)), */
     background-size:cover;
     background-position: center;
     background-attachment:fixed;
