--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@
 .banner{
     width: 100%;
     height: 100vh;
-    background-image: url("./images/bg2.gif");
+    background-image: url("./images/medmaniac-background.gif");
     /* linear-gradient(rgb(0, 0, 0),rgb(0, 0, 0)), */
     background-size:cover;
     background-position: center;
