--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@
 .banner {
   width: 100%;
   height: 100vh;
-  background-image: url("./images/br3.gif");
+  background-image: url("./images/bg23.gif");
   /* linear-gradient(rgb(0, 0, 0),rgb(0, 0, 0)), */
   background-size: cover;
   background-position: center;
@@ -33,10 +33,10 @@ img {
     justify-content: space-between;
 } */
 .logo {
-  width: 320px;
+  width: 300px;
   cursor: pointer;
   background-position: center;
-  margin-bottom: 40px;
+  margin-bottom: 20px;
 }
 .navbar ul li {
   list-style: none;
