--- a/index.css
+++ b/index.css
@@ -4,21 +4,54 @@
   font-family: sans-serif;
   -webkit-tap-highlight-color: transparent;
 }
+
+h1 {
+  text-align: center;
+  color: hsl(0, 0%, 28%);
+  font-size: 50px;
+  font-weight: 800;
+  font-family: monospace;
+  letter-spacing: 7px;
+  cursor: pointer;
+  text-transform: uppercase;
+}
+h1 {
+  padding: 20px;
+  background: linear-gradient(
+    to right,
+    hsl(0, 0%, 30%) 0,
+    #883ff9 10%,
+    hsl(0, 0%, 30%) 20%
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: shine 3s infinite linear;
+}
+@keyframes shine {
+  0% {
+    background-position: 0;
+  }
+  60% {
+    background-position: 600px;
+  }
+  100% {
+    background-position: 600px;
+  }
+}
 .banner {
   width: 100%;
   height: 100vh;
   background-image: url("./images/bg23.gif");
-  /* linear-gradient(rgb(0, 0, 0),rgb(0, 0, 0)), */
+  /* linear-gradient: (rgb(0, 0, 0), rgb(158, 19, 19)); */
   background-size: cover;
   background-position: center;
-  background-attachment: fixed;
+  /* background-attachment: fixed; */
   color: white;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-
-img {
+*/ img {
   border-radius: 50%;
 }
 .background-image {
@@ -37,6 +70,7 @@ img {
   cursor: pointer;
   background-position: center;
   margin-bottom: 20px;
+  border: 3px;
 }
 .navbar ul li {
   list-style: none;
